# murmurhash32

./: .gitignore  Cargo.toml  README.md
benches/: murmurhash32_bench.rs
src/: lib.rs  murmurhash2.rs  murmurhash3.rs
