[package]
name = "murmurhash32"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
description = """A simple implementation of murmurhash32_2"""
edition = "2018"
keywords = ["murmurhash"]
repository = "https://github.com/tantivy-search/murmurhash32"   

[dependencies]
byteorder = "1.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "murmurhash32_bench"
harness = false
