[package]
name = "murmurhash32"
version = "0.3.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
description = """A simple implementation of murmurhash32_2"""
edition = "2018"
keywords = ["murmurhash"]
repository = "https://github.com/quickwit-inc/murmurhash32"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "murmurhash32_bench"
harness = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
